einstellung_derive/src/trybuild_tests/invalid.stderr
error: Unsupported shape `one unnamed field`. Expected named fields.
 --> src/trybuild_tests/invalid.rs
  |
  | #[derive(Config)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
